Añadido popup de cookies a la pagina de Inicio

--- a/index.html
+++ b/index.html
@@ -34,6 +34,16 @@
         </div>
     </nav>
 
+    <!-- Ventana emergente de cookies -->
+    <div id="cookie-popup" class="cookie-popup hidden">
+        <div class="cookie-content">
+            <p>Utilizamos cookies para mejorar tu experiencia en nuestro sitio web. Al continuar navegando, aceptas nuestro uso de cookies. 
+                <a href="legal.html#cookies">Más información</a>.
+            </p>
+            <button id="accept-cookies" class="cookie-button">Aceptar</button>
+        </div>
+    </div>
+
     <!-- Hero Section con CTA -->
     <section id="citas" class="hero">
         <div class="video-background">
