Añadido boton de no aceptar cookies y ampliado tamaño

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
                 <a href="legal.html#cookies">Más información</a>.
             </p>
             <button id="accept-cookies" class="cookie-button">Aceptar</button>
+            <button id="reject-cookies" class="cookie-button">No aceptar</button>
         </div>
     </div>
 
