Modificada linea en pagina de privacidad

--- a/legal.html
+++ b/legal.html
@@ -230,9 +230,8 @@
             </ul>
 
             <p>De acuerdo a lo establecido en el reglamento general de protección de datos europeo (RGPD) 2016/679,
-                Clínica Veterinaria Mask!otas ( www.veterinaria-maskotas.com) con domicilio en Calle Periodista José
-                María Carulla, s/n C.P. 180014 Granada, será responsable del tratamiento de los datos correspondientes a
-                Usuarios de la web y suscriptores.</p>
+                Clínica Veterinaria Mask!otas ( www.veterinaria-maskotas.com) con domicilio en C/ dels Sants Just i Pastor, 70, 46940 Manises, València,
+                será responsable del tratamiento de los datos correspondientes a Usuarios de la web y suscriptores.</p>
 
             <p> Www.veterinaria-maskotas.com, no vende, alquila ni cede datos de carácter personal que puedan
                 identificar al usuario, ni lo hará en el futuro, a terceros sin el consentimiento previo. Sin embargo,
