--- a/flyer.html
+++ b/flyer.html
@@ -13,17 +13,31 @@
             background-color: #f0f0f0;
             color: #333;
         }
-        .logo {
-            width: 200px;
+        .header {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
             margin-bottom: 20px;
+        }
+        .logo {
+            width: 320px;
+            margin-right: 20px;
+        }
+        .img {
+            width: 340px;
+            height: auto;
+            border-radius: 10px;
         }
         .promo {
             background-color: #ffffff;
             border-radius: 10px;
             padding: 20px;
             margin-bottom: 20px;
+            margin-top: 20px;    
             box-shadow: 0 4px 6px rgba(0,0,0,0.1);
             border-top: 5px solid #009688;
+            border-left: 5px solid #009688;
+            border-right: 5px solid #009688;
         }
         .services {
             display: flex;
@@ -51,7 +65,7 @@
             transition: background-color 0.3s ease;
         }
         .cta:hover {
-            background-color: #009688;
+            background-color: #00796b;
         }
         .contact {
             margin-top: 20px;
@@ -66,7 +80,10 @@
     </style>
 </head>
 <body>
-    <img src="imagenes/logo.svg" alt="Mask!otas Logo" class="logo">
+    <div class="header">
+        <img src="imagenes/logo.svg" alt="Mask!otas Logo" class="logo">
+        <img src="./imagenes/foto-lindo-cachorro.jpg" alt="imagen_promocional" class="img">
+    </div>
     
     <div class="promo">
         <h1>¡Primera Consulta Gratuita!</h1>
