--- a/flyer.html
+++ b/flyer.html
@@ -82,7 +82,7 @@
 <body>
     <div class="header">
         <img src="imagenes/logo.svg" alt="Mask!otas Logo" class="logo">
-        <img src="./imagenes/foto-lindo-cachorro.jpg" alt="imagen_promocional" class="img">
+        <img src="imagenes/foto-lindo-cachorro.jpg" alt="imagen_promocional" class="img">
     </div>
     
     <div class="promo">
