--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <script type="text/javascript" src="scripts/index.js"></script>
+    <script>window.gtranslateSettings = {"default_language":"es","languages":["es","en"],"wrapper_selector":".gtranslate_wrapper"}</script>
+    <script src="https://cdn.gtranslate.net/widgets/latest/flags.js" defer></script>
 </head>
 
 <body>
@@ -26,6 +28,7 @@
                 <a href="#suscribirse">Suscribete</a>
                 <a href="contacto.html">Contacto</a>
             </div>
+            <div class="gtranslate_wrapper"></div>
             <div class="menu-icon">
                 <a href="javascript:void(0);" class="hamburguesa" onclick="abrirMenuMovil()">
                 <i class="fa fa-bars"></i>
