--- a/citas.html
+++ b/citas.html
@@ -6,6 +6,8 @@
     <title>Cita Previa</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <script type="text/javascript" src="scripts/index.js"></script>
+    <script>window.gtranslateSettings = {"default_language":"es","languages":["es","en"],"wrapper_selector":".gtranslate_wrapper"}</script>
+    <script src="https://cdn.gtranslate.net/widgets/latest/flags.js" defer></script>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -201,6 +203,7 @@
                     <i class="fa fa-bars"></i>
                 </a>
             </div>
+            <div class="gtranslate_wrapper"></div>
         </div>
     </nav>
 
