--- a/contacto.html
+++ b/contacto.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <script type="text/javascript" src="scripts/index.js"></script>
+    <script>window.gtranslateSettings = {"default_language":"es","languages":["es","en"],"wrapper_selector":".gtranslate_wrapper"}</script>
+    <script src="https://cdn.gtranslate.net/widgets/latest/flags.js" defer></script>
     <style>
         /* Estilos generales */
         body {
@@ -186,6 +188,7 @@
                     <i class="fa fa-bars"></i>
                 </a>
             </div>
+            <div class="gtranslate_wrapper"></div>
         </div>
     </nav>
 
