--- a/flyer.html
+++ b/flyer.html
@@ -78,8 +78,11 @@
             margin-bottom: 15px;
         }
     </style>
+    <script>window.gtranslateSettings = {"default_language":"es","languages":["es","en"],"wrapper_selector":".gtranslate_wrapper"}</script>
+    <script src="https://cdn.gtranslate.net/widgets/latest/flags.js" defer></script>
 </head>
 <body>
+    <div class="gtranslate_wrapper"></div>
     <div class="header">
         <img src="imagenes/logo.svg" alt="Mask!otas Logo" class="logo">
         <img src="imagenes/foto-lindo-cachorro.jpg" alt="imagen_promocional" class="img">
