--- a/gracias.html
+++ b/gracias.html
@@ -73,12 +73,15 @@
             background-color: #218838;
         }
     </style>
+    <script>window.gtranslateSettings = {"default_language":"es","languages":["es","en"],"wrapper_selector":".gtranslate_wrapper"}</script>
+    <script src="https://cdn.gtranslate.net/widgets/latest/flags.js" defer></script>
 </head>
 <body>
 
 <div class="container">
     <div class="banner"></div>
     <div class="content">
+        <div class="gtranslate_wrapper"></div>
         <div class="logo"></div>
         <div class="text">
             <h1>¡Gracias por inscribirte!</h1>
