--- a/legal.html
+++ b/legal.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <script type="text/javascript" src="scripts/index.js"></script>
+    <script>window.gtranslateSettings = {"default_language":"es","languages":["es","en"],"wrapper_selector":".gtranslate_wrapper"}</script>
+    <script src="https://cdn.gtranslate.net/widgets/latest/flags.js" defer></script>
 </head>
 
 <body>
@@ -32,6 +34,7 @@
                     <i class="fa fa-bars"></i>
                 </a>
             </div>
+            <div class="gtranslate_wrapper"></div>
         </div>
     </nav>
 
