--- a/plantilla.html
+++ b/plantilla.html
@@ -12,7 +12,7 @@
 <style>
     
 /* Navegación */
-nav {
+/* nav {
     background-color: #009688;
     color: white;
     position: fixed;
@@ -45,10 +45,10 @@ nav {
     font-size: 1.15rem;
     font-weight: bold;
     color: white;
-}
+} */
 
 /* Estilos para enlaces de navegación */
-.nav-links {
+/* .nav-links {
     display: flex;
     gap: 1rem;
     font-size: larger;
@@ -59,7 +59,7 @@ nav {
     display: none;
     font-size: 1.5rem;
     color: white;
-}
+} */
 
 
 
