--- a/servicios.html
+++ b/servicios.html
@@ -4,109 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MASK!OTAS - Servicios</title>
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <script type="text/javascript" src="scripts/index.js"></script>
     <script>window.gtranslateSettings = {"default_language":"es","languages":["es","en"],"wrapper_selector":".gtranslate_wrapper"}</script>
     <script src="https://cdn.gtranslate.net/widgets/latest/flags.js" defer></script>
     <style>
         /* Estilos generales */
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f4f4f9;
-            color: #333;
-        }
-        
         .container {
             width: 90%;
             max-width: 1200px;
             margin: auto;
             /*padding: 80px 20px;*/
-        }
-
-        /* Navegación */
-        nav {
-            background-color: #009688;
-            color: white;
-            position: fixed;
-            top: 0;
-            width: 100%;
-            box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1);
-            z-index: 1000;
-        }
-
-        .nav-container {
-            max-width: 1280px;
-            margin: 0 auto;
-            padding: 1rem 1.5rem;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-        }
-
-        .logo {
-            display: flex;
-            align-items: center;
-        }
-
-        .logo i {
-            font-size: 1.5rem;
-            margin-right: 0.5rem;
-        }
-
-        .logo span {
-            font-size: 1.15rem;
-            font-weight: bold;
-            color: white;
-        }
-
-        /* Estilos para enlaces de navegación */
-        .nav-links {
-            display: flex;
-            gap: 1rem;
-            font-size: larger;
-            padding: 5px;
-        }
-
-        .menu-icon .hamburguesa {
-            display: none;
-            font-size: 1.5rem;
-            color: white;
-        }
-
-        /* Mostrar menú hamburguesa en pantallas pequeñas */
-        @media screen and (max-width: 768px) {
-            .nav-links {
-                display: none;
-                flex-direction: column;
-                background-color: #00695C;
-                width: 100%;
-                position: absolute;
-                top: 60px;
-                left: 0;
-                padding: 0.5rem;
-            }
-
-            .nav-links.responsive {
-                display: flex;
-            }
-
-            .menu-icon .hamburguesa {
-                display: block;
-            }
-        }
-
-        .nav-container a {
-            color: white;
-            text-decoration: none;
-            transition: color 0.3s;
-            text-align: center;
-        }
-
-        .nav-container a:hover {
-            color: #bfdbfe;
-            background-color: #009688;
         }
 
         /* Contenido principal */
@@ -144,99 +53,6 @@
             width: 100%;
             border-radius: 8px;
             margin-top: 10px;
-        }
-
-        /* Footer */
-        footer {
-            background-color: #1f2937;
-            color: white;
-            padding: 1.5rem;
-        }
-
-        .footer-grid {
-            display: grid;
-            grid-template-columns: repeat(1, 1fr);
-            gap: 2rem;
-        }
-
-        @media (min-width: 768px) {
-            .footer-grid {
-                grid-template-columns: repeat(5, 1fr);
-            }
-        }
-
-        .footer-section h3 {
-            font-size: 1.25rem;
-            font-weight: bold;
-            margin-bottom: 1rem;
-        }
-
-        .footer-section h4 {
-            font-weight: bold;
-            margin-bottom: 1rem;
-        }
-
-        .footer-section p {
-            color: #9ca3af;
-            margin-bottom: 0.3rem;
-            margin-top: 0px;
-        }
-
-        .social-links {
-            display: flex;
-            gap: 1rem;
-        }
-
-        .legal-links p {
-            color: #9ca3af;
-            margin-top: 0.1rem;
-            padding: 0;
-        }
-
-        .social-links a,
-        .legal-links a {
-            color: #9ca3af;
-            text-decoration: none;
-            transition: color 0.3s;
-        }
-
-        .social-links a:hover,
-        .legal-links a:hover {
-            color: white;
-        }
-
-        .footer-bottom {
-            margin-top: 3rem;
-            padding: 1rem 0;
-            text-align: center;
-        }
-
-        .footer-links {
-            display: grid;
-            grid-template-columns: repeat(3, 1fr);
-            max-width: 600px;
-            margin: 0 auto;
-            gap: 0.25rem;
-        }
-
-        .footer-links a {
-            color: #9ca3af;
-            text-decoration: none;
-            font-weight: bold;
-            transition: color 0.3s;
-        }
-
-        .footer-links a:hover {
-            color: white;
-        }
-
-        /* Utilidades adicionales */
-        .text-center {
-            text-align: center;
-        }
-
-        .font-bold {
-            font-weight: bold;
         }
     </style>
 </head>
