Proxy para HTTP y HTTPS - Github

--- a/index.html
+++ b/index.html
@@ -298,6 +298,9 @@
                         <select id="registerCountry" name="country" required onchange="loadCities()">
                             <option value="">Selecciona un país</option>
                         </select>
+                        <div id="mixedContentWarning" class="mixed-content-warning" style="display: none;">
+                            <p><i class="fas fa-exclamation-triangle"></i> Si no se cargan los países, haz clic en el escudo/candado de la barra de direcciones y permite "contenido no seguro" para este sitio.</p>
+                        </div>
                     </div>
                     <div class="form-group">
                         <label for="registerCity">
