--- a/index.html
+++ b/index.html
@@ -342,6 +342,7 @@
 
     <!-- Incluir el script de tracking de conexiones -->
     <script src="js/connection-tracker.js"></script>
+    <script src="js/countries-fallback.js"></script>
     <script src="js/auth-modals.js"></script>
 </body>
 </html>
