--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
                         <label for="loginPassword">
                             <i class="fas fa-lock"></i> Contraseña
                         </label>
-                        <input type="password" id="loginPassword" name="password" required>
+                        <input type="password" id="loginPassword" name="password" autocomplete="current-password" required>
                     </div>
                     <div class="form-options">
                         <label class="checkbox-container">
@@ -314,13 +314,13 @@
                         <label for="registerPassword">
                             <i class="fas fa-lock"></i> Contraseña
                         </label>
-                        <input type="password" id="registerPassword" name="password" required>
+                        <input type="password" id="registerPassword" name="password" autocomplete="new-password" required>
                     </div>
                     <div class="form-group">
                         <label for="confirmPassword">
                             <i class="fas fa-lock"></i> Confirmar Contraseña
                         </label>
-                        <input type="password" id="confirmPassword" name="confirmPassword" required>
+                        <input type="password" id="confirmPassword" name="confirmPassword" autocomplete="new-password" required>
                     </div>
                     <div class="form-options">
                         <label class="checkbox-container">
