--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MASK!OTAS - Clínica Veterinaria</title>
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🐾</text></svg>">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <script type="text/javascript" src="scripts/index.js"></script>
@@ -243,7 +244,7 @@
                         <label for="loginEmail">
                             <i class="fas fa-envelope"></i> Correo Electrónico
                         </label>
-                        <input type="email" id="loginEmail" name="email" required>
+                        <input type="email" id="loginEmail" name="email" autocomplete="username" required>
                     </div>
                     <div class="form-group">
                         <label for="loginPassword">
@@ -289,7 +290,7 @@
                         <label for="registerEmail">
                             <i class="fas fa-envelope"></i> Correo Electrónico
                         </label>
-                        <input type="email" id="registerEmail" name="email" required>
+                        <input type="email" id="registerEmail" name="email" autocomplete="username" required>
                     </div>
                     <div class="form-group">
                         <label for="registerCountry">
