--- a/index.html
+++ b/index.html
@@ -344,6 +344,6 @@
     <!-- Incluir el script de tracking de conexiones -->
     <script src="js/connection-tracker.js"></script>
     <script src="js/countries-fallback.js"></script>
-    <script src="js/auth-modals.js"></script>
+    <script src="js/auth-modals.js?v=2025106"></script>
 </body>
 </html>
